mobile/client/src/app/stylists/stylist-card/stylist-card.component.scss
stylist-card {
  display: block;
  text-align: left;
}

.StylistCard {
  position: relative;
  display: flex;
  flex-flow: row;
  align-items: center;
  padding: pxtovw(16px) pxtovw(22px);
  margin-bottom: pxtovw(16px);
  background: white;
  border: pxtovw(2px) solid transparent;
  border-radius: pxtovw(16px);
  box-shadow: 0 pxtovw(7px) pxtovw(43px) 0 rgba(0, 0, 0, 0.08);
  transition: all 150ms ease;
}

.StylistCard-heart {
  position: absolute;
  top: pxtovw(16px);
  left: pxtovw(14px);
  font-size: pxtovw(21px);
  color: color($colors, orange);
  pointer-events: none;
  opacity: 0;
  transition: all 150ms ease;
}

.StylistCard-close {
  position: absolute;
  top: pxtovw(16px);
  right: pxtovw(14px);
  z-index: 1;
  font-size: pxtovw(16px);
  pointer-events: none;
  opacity: 0;
  transition: all 150ms ease;
}

.StylistCard-bookable {
  position: absolute;
  top: pxtovw(16px);
  right: pxtovw(14px);
  font-size: pxtovw(16px);
  color: color($colors, orange);
  opacity: 1;
  transition: all 150ms ease;
}

.StylistCard-photo {
  width: pxtovw(56px);
  height: pxtovw(56px);
  margin-right: pxtovw(16px);
  background-color: color($grayscale, 100);
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  border-radius: 50%; // circle
  transition: all 150ms ease;
}

.StylistCard-salon {
  width: 100%;
  overflow: hidden;
  font-size: $t-base;
  color: color($grayscale, 500);
  text-overflow: ellipsis;
  white-space: nowrap;
  transition: all 150ms ease;
}

.StylistCard-name {
  width: 100%;
  margin: 0 0 1px;
  overflow: hidden;
  font-size: $t-h4;
  font-weight: 700;
  text-overflow: ellipsis;
  white-space: nowrap;
  transition: all 150ms ease;
}

.StylistCard-followers {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  margin: 0;
  font-size: pxtovw(15px);
  color: color($grayscale, 500);
  white-space: normal;
  transition: all 150ms ease;

  .Link {
    // Add more contrast:
    color: color($colors, orange);
    transition: all 150ms ease;
  }

  i[class^=mb-icon] {
    margin-right: pxtovw(2px);
    font-size: pxtovw(14px);
    color: color($colors, orange);
    transition: all 150ms ease;
  }
}

.StylistCard-info {
  font-size: pxtovw(15px);
  color: color($grayscale, 500);
  white-space: normal;

  [class^=mb-icon] {
    min-width: pxtovw(18px);
    color: color($colors, orange);
  }

  .Link {
    white-space: normal;
  }
}

.StylistCard-links {
  $icon-size: pxtovw(24px);

  margin: pxtovw(25px) 0 pxtovw(28px);

  > * {
    width: $icon-size;
    height: $icon-size;
    margin: 0 ($icon-size / 2);
    font-size: $icon-size;
    color: color($colors, orange);
  }
}

.StylistCard-submit {
  $submit-height: pxtovw(48px);

  display: block;
  width: 73%;
  min-height: $submit-height;
  margin: 0 auto pxtovw(18px);
  line-height: $submit-height;
  text-align: center;
  box-shadow: none;

  > span {
    display: inline-block;
    width: auto;
    max-width: 100%;
    overflow: hidden;
    text-align: left;
    text-overflow: ellipsis;
  }
}

.StylistCard-action {
  display: block;
  font-size: $t-h4;
  font-weight: 600;
  color: color($colors, orange);
  text-align: center;
  background: none;

  > span {
    display: inline-block;
    width: auto;
    max-width: 100%;
    overflow: hidden;
    text-align: left;
    text-overflow: ellipsis;
  }
}

// card closed
.StylistCard-info,
.StylistCard-links,
.StylistCard-submit,
.StylistCard-action {
  display: none;
}

// card expanded
.StylistCard.is-active {
  flex-flow: column;
  align-items: center;
  text-align: center;
  border-color: rgb(229, 229, 229);

  .StylistCard-photo {
    width: pxtovw(88px);
    height: pxtovw(88px);
    margin: 0;
  }

  .StylistCard-salon {
    margin-top: 7px;
    font-size: $t-h4;
  }

  .StylistCard-name {
    margin-top: 9px;
    font-size: $t-h2;
  }

  .StylistCard-followers {
    justify-content: center;
    margin-top: 8px;
    font-size: $t-h4;
    color: color($colors, orange);
  }

  .StylistCard-info {
    margin-top: 12px;
    font-size: $t-h4;
  }

  // card opened
  .StylistCard-info,
  .StylistCard-submit,
  .StylistCard-links {
    display: block;
  }

  .StylistCard-heart,
  .StylistCard-close {
    pointer-events: auto;
    opacity: 1;
  }

  .StylistCard-action {
    display: inline-block;
  }

  .StylistCard-bookable {
    opacity: 0;
  }
}

.StylistCard.is-hearted {
  .StylistCard-name {
    text-align: left;
  }

  .StylistCard-close {
    top: pxtovw(19px);
    right: pxtovw(22px);
  }
}

.StylistCard.is-active.is-hearted {
  flex-flow: row;
  flex-wrap: wrap;
  justify-content: center;
  padding: pxtovw(67px) pxtovw(22px) pxtovw(14px);


  .StylistCard-photo {
    width: pxtovw(64px);
    height: pxtovw(64px);
    margin-right: pxtovw(16px);
  }

  .StylistCard-name {
    width: auto;
    margin-top: pxtovw(2px);
  }
}

